tests/machine/x/c/group_by_left_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_left_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_left_join.c:114:26: error: invalid initializer
  114 |   list_StatsItem stats = 0;
      |                          ^

   1: #include <stdio.h>
